--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 .venv
 .env
-assets/data/tbl_pedidos.csv
-assets/data/tbl_pagamentos.csv
-assets/data/tbl_vendas.csv
-airflow
+airflow/config
+airflow/dags/__pycache__
+airflow/logs
+airflow/plugins
+airflow/.env
+airflow/docker-compose.yaml
 src/jobs/__pycache__
